Bug 434263 - Color dodge brush mask produces black textures around strokes with certain settings
Summary: Color dodge brush mask produces black textures around strokes with certain se...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 4.4.3-beta1
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-03-11 00:17 UTC by tomtomtomreportingin
Modified: 2021-05-03 13:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-03-11 00:17:32 UTC
SUMMARY
Regression introduced in 4.2: When the color dodge brush mask is large and the mask's opacity and flow options are turned off, strokes will have 100% black texture edges.

STEPS TO REPRODUCE
1. Select Basic 2 Opacity Brush.
2. Enable Masked Brush Tip.
3. Change Mask blending mode to Color Dodge.
4. Set Mask diameter to 200.
5. Turn off Mask's opacity and flow options.
6. Draw with a non-black color and observe.

OBSERVED RESULT
Black textures around the stroke.

EXPECTED RESULT
No black textures around the stroke.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.12.9 (Appimage)

ADDITIONAL INFORMATION
May or may not be the same issue in https://krita-artists.org/t/help-creating-pencil-brush/20064/6
Comment 1 Deif Lou 2021-05-03 13:05:01 UTC
Git commit c40b4ca469da442d110e72cce307179039a276d0 by Deif Lou.
Committed on 03/05/2021 at 13:03.
Pushed by deiflou into branch 'master'.

Fix color dodge and color burn blend modes

Fixes incorrect handling of the 0/0 case and some artifacts in floating point
modes.

M  +60   -22   libs/pigment/compositeops/KoCompositeOpFunctions.h

https://invent.kde.org/graphics/krita/commit/c40b4ca469da442d110e72cce307179039a276d0