Fix color dodge and color burn blend modes

Fixes incorrect handling of the 0/0 case and some artifacts in floating point
modes.

BUG:434263